syntax = "proto3";

package go.micro.srv.search.search;

message SearchRequest {
  string index = 1;
  string term = 2;
  int64 from = 3;
  int64 size = 4;
  string category = 5;
  string url = 6;
  int64 depth = 7;
  string type = 8;
}

message SearchResponse {
  string result = 1;
  string info = 2;
}
